--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^8.13.2",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.8.1"
   },
   "name": "crudapp",
